--- a/testapp (1).html
+++ b/testapp (1).html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <h1> Daily Planner exclusively for test</h1>
+    <h1>Daily Planner exclusively for MONICA</h1>
 
     <!-- Task Input -->
     <div class="task-container">
