--- a/testapp (1).html
+++ b/testapp (1).html
@@ -426,5 +426,13 @@ function getMonthlyData() {
     return { days, completed, skipped, pending };
 }
 </script>
+    <!-- Firebase App (core SDK) -->
+<script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-app.js"></script>
+
+<!-- Firebase Authentication -->
+<script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-auth.js"></script>
+
+<!-- Firebase Firestore (database) -->
+<script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-firestore.js"></script>
 </body>
 </html>
