--- a/testapp (1).html
+++ b/testapp (1).html
@@ -145,6 +145,7 @@
             document.getElementById('signup-form').style.display = 'none';
             document.getElementById('login-form').style.display = 'block';
         }
+        <button onclick="signUp()">Sign Up</button>
 
         // Sign-Up Function
         function signUp() {
