--- a/testapp (1).html
+++ b/testapp (1).html
@@ -122,12 +122,13 @@
     <script>
         // Firebase configuration (replace with your own values)
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
+            apiKey: "AIzaSyCVG1dE9X5b3YAX_tG_XKc01pKx-SlC-v0",
+            authDomain: "dailyplanner-e9f7d.firebaseapp.com",
+            projectId: "dailyplanner-e9f7d",
+            storageBucket: "dailyplanner-e9f7d.firebasestorage.app",
+            messagingSenderId: "1037126520",
+            appId: "1:1037126520:web:ce7031339a68723991968d",
+            measurementId: "G-CJ2T8M13Z7"
         };
 
         // Initialize Firebase
@@ -145,7 +146,7 @@
             document.getElementById('signup-form').style.display = 'none';
             document.getElementById('login-form').style.display = 'block';
         }
-        <button onclick="signUp()">Sign Up</button>
+    
 
         // Sign-Up Function
         function signUp() {
