--- a/testapp (1).html
+++ b/testapp (1).html
@@ -121,6 +121,8 @@
 
     <script>
         // Firebase configuration (replace with your own values)
+        import { initializeApp } from "firebase/app";
+        import { getAnalytics } from "firebase/analytics";
         const firebaseConfig = {
             apiKey: "AIzaSyCVG1dE9X5b3YAX_tG_XKc01pKx-SlC-v0",
             authDomain: "dailyplanner-e9f7d.firebaseapp.com",
