--- a/login.html
+++ b/login.html
@@ -23,12 +23,13 @@
     <script>
         // Add your Firebase config here (same as in index.html)
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT_ID.appspot.com",
-            messagingSenderId: "YOUR_SENDER_ID",
-            appId: "YOUR_APP_ID"
+            apiKey: "AIzaSyCVG1dE9X5b3YAX_tG_XKc01pKx-SlC-v0",
+            authDomain: "dailyplanner-e9f7d.firebaseapp.com",
+            projectId: "dailyplanner-e9f7d",
+            storageBucket: "dailyplanner-e9f7d.firebasestorage.app",
+            messagingSenderId: "1037126520",
+            appId: "1:1037126520:web:ce7031339a68723991968d",
+            measurementId: "G-CJ2T8M13Z7"
         };
         
         // Initialize Firebase
