--- a/testapp (1).html
+++ b/testapp (1).html
@@ -13,30 +13,23 @@
         input[type="text"] { padding: 8px; width: 100%; box-sizing: border-box; }
         select { padding: 8px; width: 100%; box-sizing: border-box; }
         button { padding: 8px 15px; color: white; border: none; border-radius: 4px; cursor: pointer; }
-        .today-button { background: #4CAF50; }
-        .nav-button { background: #FF9800; }
-        .delete-button { background: #ff4444; }
-        .calendar { margin: 20px 0; display: flex; justify-content: space-between; }
-        .calendar-day { 
-            width: 13%; 
-            padding: 10px; 
-            text-align: center; 
-            border: 1px solid #ddd; 
-            cursor: pointer;
-            transition: all 0.2s ease;
-        }
-        .calendar-day.today { background: #4CAF50; color: white; }
-        .calendar-day.selected { background: #2196F3; color: white; }
-        .calendar-day.has-tasks { background: #fff3e0; }
+        .add-task-button { background: #2196F3; } /* Blue for Add Task */
+        .today-button { background: #4CAF50; } /* Green for Today button */
+        .nav-button { background: #FF9800; } /* Orange for Previous/Next buttons */
+        .delete-button { background: #ff4444; } /* Red for Delete button */
+        .logout-button { background: #555; position: absolute; top: 20px; right: 20px; } /* Gray for Logout */
+        .calendar { margin: 20px 0; }
+        .calendar div { padding: 10px; text-align: center; border: 1px solid #ddd; cursor: pointer; }
+        .calendar div.today { background: #4CAF50; color: white; }
+        .calendar div.selected { background: #2196F3; color: white; }
         .expiry-selector { margin: 10px 0; }
-        .navigation { display: flex; justify-content: space-between; margin: 10px 0; gap: 10px; }
-        .completed-task { background: #e8f5e9; }
-        .skipped-task { background: #fff3e0; }
+        .navigation { display: flex; justify-content: space-between; margin: 10px 0; }
+        .completed-task { background: #e8f5e9; } /* Light green for completed tasks */
+        .skipped-task { background: #fff3e0; } /* Light orange for skipped tasks */
         .delete-popup { display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 20px; border: 1px solid #ddd; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); z-index: 1000; }
-        .delete-popup button { margin: 5px; }
+        .delete-popup button { margin: 5px; background: #ff4444; color: black; } /* Red buttons in popup */
         .graph-container { margin-top: 40px; }
         .graph-container div { margin-bottom: 40px; }
-        h1 { color: #2c3e50; text-align: center; margin-bottom: 30px; }
     </style>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
@@ -57,6 +50,7 @@
     </script>
 </head>
 <body>
+    <button class="logout-button" onclick="logout()">Logout</button>
     <h1>Daily Planner with Enhanced Graphs</h1>
 
     <!-- Task Input -->
@@ -66,16 +60,15 @@
             <label for="expiryDate">Expiry Date:</label>
             <input type="date" id="expiryDate" min="">
         </div>
-        <button onclick="addTask()">Add Task</button>
+        <button class="add-task-button" onclick="addTask()">Add Task</button>
     </div>
 
     <!-- Navigation -->
     <div class="navigation">
-        <button class="nav-button" onclick="previousWeek()">Previous</button>
+        <button class="nav-button" onclick="previous()">Previous</button>
         <span id="currentRange"></span>
-        <button class="nav-button" onclick="nextWeek()">Next</button>
+        <button class="nav-button" onclick="next()">Next</button>
         <button class="today-button" onclick="highlightToday()">Today</button>
-        <button class="nav-button" onclick="logout()">Logout</button>
     </div>
 
     <!-- Calendar -->
@@ -108,26 +101,21 @@
             <h2>Weekly Status</h2>
             <canvas id="weeklyChart"></canvas>
         </div>
-        <div>
-            <h2>Monthly Status</h2>
-            <canvas id="monthlyChart"></canvas>
-        </div>
     </div>
 
 <script>
-// Chart instances and data
-let weeklyChartInstance = null;
-let monthlyChartInstance = null;
+// Data structure
 let plannerData = { days: [] };
 let currentDate = new Date().toLocaleDateString('en-CA');
 let currentStartDate = new Date();
 let deleteTaskId = null;
+let weeklyChartInstance = null;
 
 // Firebase Auth Listener
 auth.onAuthStateChanged(user => {
   if (user) {
     db.collection("users").doc(user.uid).get().then(doc => {
-      plannerData = doc.exists ? doc.data().plannerData : { days: [] };
+      if (doc.exists) plannerData = doc.data().plannerData || { days: [] };
       initializeApp();
     });
   } else {
@@ -142,122 +130,126 @@ function initializeApp() {
   }
   
   document.getElementById('expiryDate').min = currentDate;
-  updateUI();
-}
-
-function updateUI() {
   renderCalendar();
   loadDay(currentDate);
   renderCharts();
-  updateNavigation();
 }
 
-function renderCalendar() {
-  const calendar = document.getElementById('calendar');
-  calendar.innerHTML = '';
+function addTask() {
+  const input = document.getElementById('taskInput');
+  const expiryDate = document.getElementById('expiryDate').value;
+  const taskName = input.value.trim();
   
-  const startDate = new Date(currentStartDate);
-  startDate.setDate(startDate.getDate() - 3);
+  if (taskName && expiryDate) {
+    const taskId = Date.now();
+    const startDate = new Date(currentDate);
+    const endDate = new Date(expiryDate);
 
-  for (let i = 0; i < 7; i++) {
-    const date = new Date(startDate);
-    date.setDate(date.getDate() + i);
-    const dateStr = date.toISOString().split('T')[0];
+    while (startDate <= endDate) {
+      const dateStr = startDate.toISOString().split('T')[0];
+      let day = plannerData.days.find(day => day.date === dateStr);
+      
+      if (!day) {
+        day = { date: dateStr, tasks: [] };
+        plannerData.days.push(day);
+      }
+
+      if (!day.tasks.some(task => task.id === taskId)) {
+        day.tasks.push({
+          id: taskId,
+          name: taskName,
+          status: 'pending',
+          notes: ''
+        });
+      }
+      startDate.setDate(startDate.getDate() + 1);
+    }
     
-    const isToday = dateStr === new Date().toLocaleDateString('en-CA');
-    const isSelected = dateStr === currentDate;
-    const hasTasks = plannerData.days.some(d => d.date === dateStr && d.tasks.length > 0);
-
-    calendar.innerHTML += `
-      <div class="calendar-day 
-        ${isToday ? 'today' : ''} 
-        ${isSelected ? 'selected' : ''}
-        ${hasTasks ? 'has-tasks' : ''}" 
-        onclick="loadDay('${dateStr}')">
-        ${date.toLocaleDateString('en-US', { weekday: 'short', day: 'numeric' })}
-      </div>
-    `;
+    input.value = '';
+    saveData();
+    loadDay(currentDate);
+    renderCharts();
   }
 }
 
-function loadDay(date) {
-  currentDate = date;
-  const day = plannerData.days.find(d => d.date === date) || { tasks: [] };
-  const tasksList = document.getElementById('tasksList');
-  
-  tasksList.innerHTML = day.tasks.map(task => `
-    <tr class="${task.status}-task">
-      <td>${task.name}</td>
-      <td>
-        <select onchange="updateStatus(${task.id}, this.value)">
-          <option value="pending" ${task.status === 'pending' ? 'selected' : ''}>Pending</option>
-          <option value="completed" ${task.status === 'completed' ? 'selected' : ''}>Completed</option>
-          <option value="skipped" ${task.status === 'skipped' ? 'selected' : ''}>Skip for the Day</option>
-        </select>
-      </td>
-      <td>
-        <input type="text" value="${task.notes || ''}" 
-               onchange="updateNotes(${task.id}, this.value)">
-      </td>
-      <td>
-        <button class="delete-button" onclick="openDeletePopup(${task.id})">Delete</button>
-      </td>
-    </tr>
-  `).join('');
-  
-  renderCalendar();
+function updateStatus(id, status) {
+  const day = plannerData.days.find(day => day.date === currentDate);
+  if (day) {
+    const task = day.tasks.find(task => task.id === id);
+    if (task) {
+      task.status = status;
+      saveData();
+      loadDay(currentDate);
+      renderCharts();
+    }
+  }
+}
+
+function deleteForToday() {
+  const day = plannerData.days.find(day => day.date === currentDate);
+  if (day) {
+    day.tasks = day.tasks.filter(task => task.id !== deleteTaskId);
+    saveData();
+    loadDay(currentDate);
+    renderCharts();
+  }
+  closeDeletePopup();
+}
+
+function deleteCompletely() {
+  plannerData.days.forEach(day => {
+    day.tasks = day.tasks.filter(task => task.id !== deleteTaskId);
+  });
+  saveData();
+  loadDay(currentDate);
+  renderCharts();
+  closeDeletePopup();
 }
 
 function renderCharts() {
   if (weeklyChartInstance) weeklyChartInstance.destroy();
-  if (monthlyChartInstance) monthlyChartInstance.destroy();
 
   const weeklyData = getWeeklyData();
-  const monthlyData = getMonthlyData();
-
-  weeklyChartInstance = new Chart(document.getElementById('weeklyChart'), {
+  const ctx = document.getElementById('weeklyChart').getContext('2d');
+  
+  weeklyChartInstance = new Chart(ctx, {
     type: 'bar',
     data: {
-      labels: weeklyData.days.map(d => new Date(d).toLocaleDateString()),
-      datasets: [
-        { label: 'Completed', data: weeklyData.completed, backgroundColor: '#4CAF50' },
-        { label: 'Skipped', data: weeklyData.skipped, backgroundColor: '#FF9800' },
-        { label: 'Pending', data: weeklyData.pending, backgroundColor: '#2196F3' }
-      ]
-    }
-  });
-
-  monthlyChartInstance = new Chart(document.getElementById('monthlyChart'), {
-    type: 'bar',
-    data: {
-      labels: monthlyData.days.map(d => new Date(d).getDate()),
-      datasets: [
-        { label: 'Completed', data: monthlyData.completed, backgroundColor: '#4CAF50' },
-        { label: 'Skipped', data: monthlyData.skipped, backgroundColor: '#FF9800' },
-        { label: 'Pending', data: monthlyData.pending, backgroundColor: '#2196F3' }
-      ]
+      labels: weeklyData.days,
+      datasets: [{
+        label: 'Completed Tasks',
+        data: weeklyData.completed,
+        backgroundColor: '#4CAF50'
+      }]
+    },
+    options: {
+      scales: {
+        y: { beginAtZero: true, title: { display: true, text: 'Total Completions' } },
+        x: { title: { display: true, text: 'Days' } }
+      }
     }
   });
 }
 
-// Keep all other functions (addTask, updateStatus, delete functions, etc.) 
-// from previous implementation but replace saveData() calls with updateUI()
-// and ensure all date navigation functions use week-based navigation
+function getWeeklyData() {
+  const today = new Date();
+  const startOfWeek = new Date(today);
+  startOfWeek.setDate(today.getDate() - today.getDay());
+  const endOfWeek = new Date(today);
+  endOfWeek.setDate(today.getDate() + (6 - today.getDay()));
 
-function previousWeek() {
-  currentStartDate.setDate(currentStartDate.getDate() - 7);
-  updateUI();
-}
+  const days = [];
+  const completed = [];
 
-function nextWeek() {
-  currentStartDate.setDate(currentStartDate.getDate() + 7);
-  updateUI();
-}
+  for (let d = new Date(startOfWeek); d <= endOfWeek; d.setDate(d.getDate() + 1)) {
+    const dateStr = d.toISOString().split('T')[0];
+    days.push(dateStr);
 
-function highlightToday() {
-  currentStartDate = new Date();
-  currentDate = new Date().toLocaleDateString('en-CA');
-  updateUI();
+    const day = plannerData.days.find(day => day.date === dateStr);
+    completed.push(day ? day.tasks.filter(task => task.status === 'completed').length : 0);
+  }
+
+  return { days, completed };
 }
 
 function saveData() {
@@ -272,7 +264,7 @@ function logout() {
   auth.signOut().then(() => window.location.href = "login.html");
 }
 
-// Keep getWeeklyData and getMonthlyData functions unchanged from original
+// Keep other functions (loadDay, renderCalendar, etc.) unchanged
 </script>
 </body>
 </html>
