--- a/testapp (1).html
+++ b/testapp (1).html
@@ -14,6 +14,8 @@
         .task-container input[type="text"] { padding: 8px; width: 60%; margin-right: 10px; }
         .task-container input[type="date"] { padding: 8px; margin-right: 10px; }
         .add-task-button { background: #2196F3; color: white; padding: 8px 15px; border: none; border-radius: 4px; cursor: pointer; }
+        .navigation { display: flex; justify-content: space-between; margin: 20px 0; }
+        .nav-button { background: #FF9800; color: white; padding: 8px 15px; border: none; border-radius: 4px; cursor: pointer; }
         .task-table { width: 100%; border-collapse: collapse; margin: 20px 0; }
         .task-table th, .task-table td { padding: 10px; border: 1px solid #ddd; text-align: left; }
         .task-table th { background: #f5f5f5; }
@@ -35,6 +37,13 @@
         <input type="text" id="taskInput" placeholder="Enter task...">
         <input type="date" id="expiryDate" min="">
         <button class="add-task-button" onclick="addTask()">Add Task</button>
+    </div>
+
+    <!-- Navigation -->
+    <div class="navigation">
+        <button class="nav-button" onclick="previousDay()">Previous Day</button>
+        <span id="currentDateDisplay"></span>
+        <button class="nav-button" onclick="nextDay()">Next Day</button>
     </div>
 
     <!-- Task List -->
@@ -60,7 +69,7 @@
 
     <!-- Weekly Chart -->
     <div class="graph-container">
-        <h2>Weekly Completion</h2>
+        <h2>Weekly Task Status</h2>
         <canvas id="weeklyChart"></canvas>
     </div>
 
@@ -100,6 +109,7 @@ auth.onAuthStateChanged(user => {
 // Initialize App
 function initializeApp() {
     document.getElementById('expiryDate').min = currentDate;
+    updateDateDisplay();
     loadDay(currentDate);
     renderCharts();
 }
@@ -139,6 +149,7 @@ function addTask() {
 // Load Tasks for Current Day
 function loadDay(date) {
     currentDate = date;
+    updateDateDisplay();
     const day = plannerData.days.find(d => d.date === date) || { tasks: [] };
     const tasksList = document.getElementById('tasksList');
     
@@ -158,18 +169,26 @@ function loadDay(date) {
     `).join('');
 }
 
-// Update Task Status
-function updateStatus(id, status) {
-    const day = plannerData.days.find(day => day.date === currentDate);
-    if (day) {
-        const task = day.tasks.find(task => task.id === id);
-        if (task) {
-            task.status = status;
-            saveData();
-            loadDay(currentDate);
-            renderCharts();
-        }
-    }
+// Update Date Display
+function updateDateDisplay() {
+    const dateDisplay = document.getElementById('currentDateDisplay');
+    const date = new Date(currentDate);
+    dateDisplay.textContent = date.toLocaleDateString('en-US', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
+}
+
+// Navigation Functions
+function previousDay() {
+    const date = new Date(currentDate);
+    date.setDate(date.getDate() - 1);
+    currentDate = date.toLocaleDateString('en-CA');
+    loadDay(currentDate);
+}
+
+function nextDay() {
+    const date = new Date(currentDate);
+    date.setDate(date.getDate() + 1);
+    currentDate = date.toLocaleDateString('en-CA');
+    loadDay(currentDate);
 }
 
 // Render Weekly Chart
@@ -183,15 +202,15 @@ function renderCharts() {
         type: 'bar',
         data: {
             labels: weeklyData.days,
-            datasets: [{
-                label: 'Completed Tasks',
-                data: weeklyData.completed,
-                backgroundColor: '#4CAF50'
-            }]
+            datasets: [
+                { label: 'Completed', data: weeklyData.completed, backgroundColor: '#4CAF50' },
+                { label: 'Pending', data: weeklyData.pending, backgroundColor: '#2196F3' },
+                { label: 'Skipped', data: weeklyData.skipped, backgroundColor: '#FF9800' }
+            ]
         },
         options: {
             scales: {
-                y: { beginAtZero: true, title: { display: true, text: 'Total Completions' } },
+                y: { beginAtZero: true, title: { display: true, text: 'Number of Tasks' } },
                 x: { title: { display: true, text: 'Days' } }
             }
         }
@@ -208,16 +227,20 @@ function getWeeklyData() {
 
     const days = [];
     const completed = [];
+    const pending = [];
+    const skipped = [];
 
     for (let d = new Date(startOfWeek); d <= endOfWeek; d.setDate(d.getDate() + 1)) {
         const dateStr = d.toISOString().split('T')[0];
         days.push(dateStr);
 
-        const day = plannerData.days.find(day => day.date === dateStr);
-        completed.push(day ? day.tasks.filter(task => task.status === 'completed').length : 0);
+        const day = plannerData.days.find(day => day.date === dateStr) || { tasks: [] };
+        completed.push(day.tasks.filter(task => task.status === 'completed').length);
+        pending.push(day.tasks.filter(task => task.status === 'pending').length);
+        skipped.push(day.tasks.filter(task => task.status === 'skipped').length);
     }
 
-    return { days, completed };
+    return { days, completed, pending, skipped };
 }
 
 // Save Data to Firebase
